--- a/.gitignore
+++ b/.gitignore
@@ -51,4 +51,6 @@ compile_commands.json
 # QtCreator local machine specific files for imported projects
 *creator.user*
 
+.idea
 build
+cmake-build-*
